# EclairLooks

./: .clang-format  .gitignore  .travis.yml  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTORS  LICENSE  README.rst
.travis/: fix-deps.sh  install-deps.sh
cmake/modules/: FindCTL.cmake
ext/: 0001-Fix-compatibility-with-ilmbase-2.3.patch  0002-Fix-dpx-lib-cxx-17-compilation.patch  0003-cmake-3-macos_rpath-compliance.patch  CMakeLists.txt
src/: CMakeLists.txt  context.cpp  context.h  main.cpp  version.h.in
src/core/: image.cpp  image.h  imagepipeline.cpp  imagepipeline.h  types.h
src/gui/: mainwindow.cpp  mainwindow.h  uiloader.cpp  uiloader.h
src/gui/common/: browser.cpp  browser.h  common.cpp  common.h  imageviewer.cpp  imageviewer.h  setting.cpp  setting.h  slider.cpp  slider.h  textureview.cpp  textureview.h
src/gui/scope/: cube.cpp  cube.h  neutral.cpp  neutral.h  vectorscope.cpp  vectorscope.h  waveform.cpp  waveform.h
src/gui/view/dev/: operator.cpp  operator.h  operatorlist.cpp  operatorlist.h  pipeline.cpp  pipeline.h  widget.cpp  widget.h
src/gui/view/log/: widget.cpp  widget.h
src/gui/view/look/: detail.cpp  detail.h  listview.cpp  listview.h  selection.cpp  selection.h  tabview.cpp  tabview.h  widget.cpp  widget.h
src/operator/: imageoperator.cpp  imageoperator.h  imageoperator.hpp  imageoperatorlist.cpp  imageoperatorlist.h
src/operator/ctl/: operator.cpp  operator.h  transform.cpp  transform.h
src/operator/ocio/: colorspace.cpp  colorspace.h  filetransform.cpp  filetransform.h  matrix.cpp  matrix.h
src/parameter/: parameter.cpp  parameter.h  parameterlist.cpp  parameterlist.h  parameterlist.hpp  parameterseriallist.cpp  parameterseriallist.h  parameterwidget.cpp  parameterwidget.h
src/parameter/checkbox/: parameter.cpp  parameter.h  widget.cpp  widget.h
src/parameter/filepath/: parameter.cpp  parameter.h  widget.cpp  widget.h
src/parameter/matrix/: parameter.cpp  parameter.h  widget.cpp  widget.h
src/parameter/select/: parameter.cpp  parameter.h  widget.cpp  widget.h
src/parameter/slider/: parameter.cpp  parameter.h  widget.cpp  widget.h
src/parameter/text/: parameter.cpp  parameter.h  widget.cpp  widget.h
src/resources/: res.qrc
src/resources/css/: application.css
src/resources/html/: help.html
src/resources/icons/: hexa.icns
src/resources/images/: stresstest.exr
src/resources/ui/: devwidget.ui  lookwidget.ui
src/utils/: chrono.cpp  chrono.h  event_source.h  event_source.hpp  generic.h  gl.h  pystring.cpp  pystring.h
